# plur_linux

./: LICENSE  README.md  pyproject.toml  run.sh
src/plur_linux/: __init__.py  server_menu.py
src/plur_linux/lib/: env_ops.py  lib_selection.py
src/plur_linux/nodes/: guest_base.py  new_node.py  util.py
src/plur_linux/nodes/guests/: a8images.py  a9images.py  dock.py  for_onestop.py  gluster.py  images.py  images_ubu.py  kubeadm_a9.py  ubudock.py
src/plur_linux/nodes/shinjuku/: gluster.py  kubeadm_a9.py
src/plur_linux/recipes/: base.py  firewalld.py  git.py  ipv4.py  keepalived.py  nfsen.py  nvim.py  prepare_repos.py  repos.py  setup.py  vsftpd.py  zabbix_agent.py
src/plur_linux/recipes/almalinux8/: desktop.py  docker.py  google_authenticator.py  openvswitch.py  ops.py  pxe.py
src/plur_linux/recipes/almalinux9/: desktop.py  docker.py  glusterfs.py  openvswitch.py  ops.py  pxe.py
src/plur_linux/recipes/centos/: ceph.py  chrony.py  dropbox.py  freeradius.py  iptables.py  ldap_server_gakunin.py  nfs_exports.py  ntp.py  shibboleth_sp.py  splunk.py  xrdp.py
src/plur_linux/recipes/clitools/: tmux.py
src/plur_linux/recipes/desktop/: fedora.py  redhat.py
src/plur_linux/recipes/docker/: common.py  dock_net.py  dock_util.py  git_repository.py  mariadb.py
src/plur_linux/recipes/etcd/: etcd.py
src/plur_linux/recipes/file_ops/: distribute.py
src/plur_linux/recipes/firefox/: setup.py
src/plur_linux/recipes/freeradius/: create_conf_str.py
src/plur_linux/recipes/kubernetes/: common.py  (+3 more)
src/plur_linux/scripts/: ovs.sh  ovsinfo.py  ovsinfo2.py  show_taps.py
(+243 files in other folders)
