[project]
name = "plur-linux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masayoshi Kokuryo", email = "masakoku@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "plur",
]
[project.scripts]
server_menu = "plur_linux.server_menu:main_menu"
env_menu = "plur_linux.lib.env_ops:env_menu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
plur = { git = "https://github.com/pluripotency/plur" }

[tool.pyright]
include = "."
venv = ".venv"
check-str-concat-over-line-jumps = "yes"
