[project]
name = "plur-linux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Masayoshi Kokuryo", email = "masakoku@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "plur>=0.2.1",
  "mini>=0.2.1",
]
[project.scripts]
server_menu = "plur_linux.server_menu:main_menu"
env_menu = "plur_linux.lib.env_ops:env_menu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
plur = { git = "https://github.com/pluripotency/plur" }
mini = { git = "https://github.com/pluripotency/mini" }

#[tool.pyright]
#include = "."
#venv = ".venv"
#check-str-concat-over-line-jumps = "yes"
